[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/xolonium.tres" type="DynamicFont" id=1]
[ext_resource path="res://SunlightHUD.gd" type="Script" id=2]
[ext_resource path="res://assets/Xolonium-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="InputEventAction" id=2]
action = "ui_select"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[node name="SunlightHUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
visible = false
anchor_right = 1.0
margin_left = 1.0
margin_top = 80.0
margin_right = 1.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="."]
visible = false
anchor_right = 1.0
margin_left = 382.938
margin_top = 2.0
margin_right = -7.06165
margin_bottom = 80.0
text = "TIME LEFT: 20"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -79.5
margin_bottom = 79.5
custom_fonts/font = SubResource( 1 )
text = "Catch 20 Sunlight!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -200.0
margin_right = 90.0
margin_bottom = -100.0
custom_fonts/font = SubResource( 1 )
shortcut = SubResource( 3 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="."]
visible = false
margin_left = 176.0
margin_top = 632.0
margin_right = 304.0
margin_bottom = 681.0
custom_fonts/font = ExtResource( 1 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="WinLoseTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="timeout" from="WinLoseTimer" to="." method="_on_MessageTimer_timeout"]
